# dioxus-query-with-dioxus-router

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
src/views/: blog.rs  mod.rs
